# The-AI-Engineer-Challenge

./: DEPLOYMENT_GUIDE.md  MERGE.md  PDF_RAG_README.md  pyproject.toml  vercel.json
.cursor/rules/: general-rule.mdc
api/: .gitignore  app.py  chat.py  health.py  rag_service.py  rag_upload.py  requirements.txt  simple_rag_service.py  test_pdf_rag.py  vercel.json
frontend/: env.example  next.config.ts
frontend/src/app/: page.tsx
frontend/src/app/pdf-chat/: page.tsx
