[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "jupyter>=1.1.1",
    "openai>=1.3.7",
    "pydantic>=2.5.0",
    "uvicorn>=0.24.0",
    "PyPDF2>=3.0.1",
    "numpy>=1.24.3",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]
